--- a/pay.html
+++ b/pay.html
@@ -6,6 +6,11 @@
 </head>
 <body>
   <h2>Secure Payment</h2>
+  <!-- ⭐ Discount Banner -->
+<div id="discountBanner" style="color: #00f0ff; font-size: 20px; margin-bottom: 20px;">
+  <span style="text-decoration: line-through; color: gray;">₹249</span>
+  <span style="font-weight: bold; color: #00ff99;"> ₹149 Only!</span>
+</div>
   <button id="rzp-button">Pay ₹149</button>
   <script>
     document.getElementById("rzp-button").onclick = function () {
