--- a/index.html
+++ b/index.html
@@ -1,23 +1,318 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
   <title>MeckTech Assessment</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #121212;
+      color: white;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: auto;
+      padding: 2rem;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 0.8rem;
+      margin-top: 0.5rem;
+      border: none;
+      border-radius: 5px;
+      background-color: #1e1e1e;
+      color: white;
+    }
+
+    button {
+      padding: 0.8rem 2rem;
+      margin-top: 1rem;
+      background-color: #03dac5;
+      color: black;
+      font-weight: bold;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .question-box {
+      margin-top: 2rem;
+      background: #1e1e1e;
+      padding: 1rem;
+      border-radius: 8px;
+    }
+
+    .question-box p {
+      margin-bottom: 1rem;
+    }
+
+    label {
+      display: block;
+      margin-top: 1rem;
+    }
+
+    .options label {
+      display: block;
+      margin: 0.5rem 0;
+    }
+
+    #result {
+      font-size: 1.5rem;
+      margin-top: 2rem;
+    }
+
+    #fullscreen-warning {
+      color: red;
+      margin-top: 1rem;
+      font-weight: bold;
+    }
+
+    .strike {
+      text-decoration: line-through;
+      color: grey;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <img src="logo.png" class="logo" alt="MeckTech Logo"/>
-    <h1>Welcome to MeckTech Assessment</h1>
-    <p>⚠️ Test will open in fullscreen.<br>
-    Exiting fullscreen cancels your test.<br>
-    You must score <b>15/20</b> or more to be eligible for a certificate.</p>
-    <form id="startForm">
-      <input type="text" placeholder="Full Name" required>
-      <input type="email" placeholder="Email" required>
-      <input type="text" placeholder="Address" required>
-      <button type="submit">Start Test</button>
-    </form>
+<div class="container">
+  <div id="start-section">
+    <h2>Welcome to MeckTech CS/AI-ML Assessment</h2>
+    <p><b>Instructions:</b></p>
+    <ul>
+      <li>Test will open in <b>fullscreen</b> — do not exit fullscreen.</li>
+      <li>Exiting fullscreen will <b>cancel your test</b> and make you ineligible for certificate.</li>
+      <li>You must answer at least <b>15 out of 20</b> questions correctly to qualify.</li>
+      <li>Certificate will be sent via email <b>only after payment</b>.</li>
+    </ul>
+    <label>Full Name</label>
+    <input type="text" id="name" required />
+    <label>Email</label>
+    <input type="email" id="email" required />
+    <label>Address</label>
+    <textarea id="address" required></textarea>
+    <button onclick="startTest()">Start Assessment</button>
   </div>
-  <script src="launch.js"></script>
+
+  <div id="quiz-section" class="hidden">
+    <div id="question-box" class="question-box"></div>
+    <button onclick="nextQuestion()">Next</button>
+    <p id="fullscreen-warning" class="hidden">⚠️ You exited fullscreen. Test cancelled.</p>
+  </div>
+
+  <div id="result-section" class="hidden">
+    <h2>Test Complete</h2>
+    <div id="result"></div>
+    <div id="payment-section" class="hidden">
+      <p>To receive your certificate, please make payment of:
+        <span class="strike">₹249</span> <b>₹149</b> only.
+      </p>
+      <button onclick="payNow()">Pay & Get Certificate</button>
+    </div>
+    <div id="success-message" class="hidden">
+      <h3>✅ Payment Successful</h3>
+      <p>Your certificate will be sent to your email shortly.</p>
+      <small>MeckTech doesn't claim any partnership with any other company, this assessment is based on your personal knowledge about CS/Ai-ML course. We hope our certificate helps you in future, All the best.</small>
+    </div>
+  </div>
+<script>
+let questions = [];
+let currentIndex = 0;
+let correctAnswers = 0;
+let userName = "";
+let userEmail = "";
+let userScore = 0;
+
+// 🔁 Load questions from GitHub
+async function loadQuestions() {
+  try {
+    const res = await fetch("https://raw.githubusercontent.com/mayankchavan13/MeckTech-site-admin/main/questions.json");
+    const data = await res.json();
+    questions = shuffle(data).slice(0, 20); // use first 20
+    showQuestion();
+  } catch (err) {
+    alert("Failed to load questions. Please try later.");
+    console.error(err);
+  }
+}
+
+function shuffle(array) {
+  return array.sort(() => Math.random() - 0.5);
+}
+
+function startTest() {
+  userName = document.getElementById("name").value.trim();
+  userEmail = document.getElementById("email").value.trim();
+  const userAddress = document.getElementById("address").value.trim();
+
+  if (!userName || !userEmail || !userAddress) {
+    alert("Please fill all required details.");
+    return;
+  }
+
+  document.getElementById("start-section").classList.add("hidden");
+  document.getElementById("quiz-section").classList.remove("hidden");
+  launchFullscreen(document.documentElement);
+  loadQuestions();
+}
+
+function showQuestion() {
+  if (currentIndex >= questions.length) {
+    endTest();
+    return;
+  }
+
+  const q = questions[currentIndex];
+  const container = document.getElementById("question-box");
+  container.innerHTML = `
+    <p><b>Q${currentIndex + 1}:</b> ${q.question}</p>
+    <div class="options">
+      ${["A", "B", "C", "D"].map((opt, i) => `
+        <label><input type="radio" name="option" value="${opt}" /> ${opt}: ${q.options[i]}</label>
+      `).join("")}
+    </div>
+  `;
+}
+
+function nextQuestion() {
+  const selected = document.querySelector("input[name='option']:checked");
+  if (!selected) {
+    alert("Please select an option.");
+    return;
+  }
+
+  const answer = selected.value;
+  if (answer === questions[currentIndex].correct) {
+    correctAnswers++;
+  }
+
+  currentIndex++;
+  showQuestion();
+}
+
+function endTest() {
+  userScore = correctAnswers;
+  exitFullscreen();
+  document.getElementById("quiz-section").classList.add("hidden");
+  document.getElementById("result-section").classList.remove("hidden");
+  document.getElementById("result").innerText = `You got ${correctAnswers} out of 20 correct.`;
+
+  if (correctAnswers >= 15) {
+    document.getElementById("payment-section").classList.remove("hidden");
+  }
+}
+
+// Fullscreen handling
+function launchFullscreen(element) {
+  if (element.requestFullscreen) {
+    element.requestFullscreen();
+  } else if (element.webkitRequestFullscreen) {
+    element.webkitRequestFullscreen();
+  } else if (element.msRequestFullscreen) {
+    element.msRequestFullscreen();
+  }
+}
+
+function exitFullscreen() {
+  if (document.exitFullscreen) {
+    document.exitFullscreen();
+  } else if (document.webkitExitFullscreen) {
+    document.webkitExitFullscreen();
+  }
+}
+
+document.addEventListener("fullscreenchange", checkFullscreen);
+document.addEventListener("webkitfullscreenchange", checkFullscreen);
+document.addEventListener("mozfullscreenchange", checkFullscreen);
+
+function checkFullscreen() {
+  if (!document.fullscreenElement && !document.webkitFullscreenElement) {
+    document.getElementById("fullscreen-warning").classList.remove("hidden");
+    document.getElementById("quiz-section").classList.add("hidden");
+    questions = [];
+  }
+}
+</script>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script>
+function payNow() {
+  const options = {
+    key: "rzp_test_YourKeyHere", // 🔁 Replace with your Razorpay key
+    amount: 14900, // in paise
+    currency: "INR",
+    name: "MeckTech Certificate",
+    description: "CS/AI-ML Assessment Certificate",
+    handler: function (response) {
+      document.getElementById("payment-section").classList.add("hidden");
+      document.getElementById("success-message").classList.remove("hidden");
+      savePaidUser();
+    },
+    prefill: {
+      name: userName,
+      email: userEmail
+    },
+    theme: {
+      color: "#03dac5"
+    }
+  };
+  const rzp = new Razorpay(options);
+  rzp.open();
+}
+
+async function savePaidUser() {
+  const username = "mayankchavan13";
+  const repo = "MeckTech-site-admin";
+  const token = "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"; // 🔁 Replace with your GitHub token
+  const file = "paid_users.json";
+  const url = `https://api.github.com/repos/${username}/${repo}/contents/${file}`;
+
+  try {
+    const res = await fetch(`https://raw.githubusercontent.com/${username}/${repo}/main/${file}`);
+    const existing = await res.json();
+
+    const updated = [...existing, {
+      name: userName,
+      email: userEmail,
+      score: userScore
+    }];
+
+    const content = btoa(JSON.stringify(updated, null, 2));
+
+    let sha = "";
+    try {
+      const existingRes = await fetch(url, {
+        headers: {
+          Authorization: `token ${token}`,
+          Accept: "application/vnd.github+json"
+        }
+      });
+      const data = await existingRes.json();
+      sha = data.sha;
+    } catch {}
+
+    await fetch(url, {
+      method: "PUT",
+      headers: {
+        Authorization: `token ${token}`,
+        Accept: "application/vnd.github+json"
+      },
+      body: JSON.stringify({
+        message: "Add paid user",
+        content,
+        sha
+      })
+    });
+  } catch (err) {
+    console.error("Saving paid user failed", err);
+  }
+}
+</script>
 </body>
 </html>
